<resources>
    <string name="app_name">Animasyonlar</string>
    <string name="image">Resim</string>
    <string name="weather">Hava Durumu</string>
    <string name="start">Basla</string>
    <string name="button_top">Buton Ust</string>
    <string name="button_bottom">Buton Alt</string>
    <string name="long_text">Yağmur yağıyordu. Adı yağmur ormanları zaten. Hamakta yatıp onu seyretmek keyifliydi, her gün olsa bile. Bunu yaparken kahve içmekse harika. Tek kötülüğü bitene kadar elinde tutmalıydın. Bittikten sonra yan yana yatılabiliyordu cam kavanozla. Kahve fincanı olarak kullandığım bir kavanozdu bu ama bazen çorba da koyuyordum içine ve bazen siyah fasulye. Hamakta yemek güzel oluyordu. Bitince, içinde ne varsa artık, kolunu dışarı uzatıp yağmurda yıkayabiliyordun. Deterjan kullanmadığım için temiz oluyordu. Sadece bazen biraz yağ kalıyordu galiba. Kahvenin üstünde sırt üstü yüzüyordu yağ… Bazen ama…  Yağmur bitince boa yılanı gölüne gidiyorduk yüzmek için. Göl filan değildi aslında. Sadece üç metreye dört metre, boyu aşmayan bir suydu. İsmini de ben koymuştum zaten. İki gün önce yüzmeye gittiğimizde bizden önce bir boa yılanı çıkmıştı içinden. Hayatımda gördüğüm en büyük yılandı. Çok iddialı değilim aslında çok yılan gördüğüm filan yok. Üç-beş defadır en fazla. Yavaşça süzüldü önce suda, sonra yaprakların arasında. Biraz bekleyip suyun yanına gittik. Su çok berraktı ve başka bir yılan yoktu. Dedim ya çok berrak oluyordu su, yanılmamıza imkan yoktu. Yüzdük yine, bir iki kulaç ama yağmurun içinde olmak bu, istersen içebiliyorsun da…  Bir kadın gerilla anlatmıştı. Brezilya’da değil başka bir ülkede. Bir yılan, gerillaya aşık olmuştu. Beline kadar inen saçları vardı kadın gerillanın. Bir gün suya gittiklerinde gördüler, yılan onları izliyordu. Sonra her gün gittiklerinde onu su başında bekliyor buluyorlardı. Hep onu seyrediyordu yılan. Belki saçları yüzündendi diyordu anlatan gerilla, beline kadar çok güzel saçları vardı. Sonra peşlerinden gelmeye başladı yılan. Durduklarında o da duruyordu, başını dikip ona bakıyordu. Güldüler gerillalar, aldırmadılar yılana. Pek de rahatsız olmadılar. Dağda pek yabancı gelmez doğa insana. Bir sabah anlatan gerilla gördü. Yılan aşığının yanında uzanmış yatıyordu. Saçlarına sarılmış gibiydi. Uzun saçlarından galiba dedim anlatan gerillaya. Güzel bir kadındı dedi. Fakat bu sefer ürktüler gerçekten, hele aşık olunan gerilla hiç hoşlanmadı bundan. Uzakta başka bir birliğe gitti. Sonra yılan her gün yine onları su başında bekliyordu. Onu göremeyince arkasını dönüp gidiyordu. Çok hüzünlü bakıyordu diye anlattı gerilla. Bir süre sonra hiç görünmedi. Belki peşinden aramaya gitmiştir dedim. Biz de öyle düşündük dedi gerilla, saçları çok uzun değildi…  Boa yılanı gölünden çıkınca, yani yağmurdan, bir kulübenin önünde toplanmış gençlerin yanına gidiyorduk. 15-20 kişi birlikte perküsyon çalıyorlardı. Yani ağaç gövdeleri, iki uzun tahta ağaç gövdelerine dayanmış, yan yana ve bambular biraz daha tok sesli onlar…  Sonra biri rom getiriyordu şeker kamışından. Kavanozu uzatıyordum romda kahve tadı oluyordu… Bazen ama…</string>
</resources>